# vehicle-counter

./: .gitignore  README.md  aforo2_sesion_1.py  auditoria.md  pyproject.toml  requirements.txt  test_bounding_box.py  test_cli.py  test_library_api.py
processing/: .gitignore  debug_bbox.py  requirements.txt
processing/src/: __init__.py  cli.py  pipeline.py
processing/src/config/: __init__.py  botsort_vehicles.yaml  detection_params.yaml  settings.py
processing/src/data/: __init__.py  directory_scanner.py  schemas.py
processing/src/output/: __init__.py  csv_exporter.py  visualizer.py
processing/src/processing/: __init__.py  base_detector.py  counter.py  detector.py  mask_manager.py  segmenter.py  zone_deduplicator.py  zone_manager.py
processing/src/storage/: __init__.py  base.py  local.py
processing/src/utils/: __init__.py  deblurring.py  geometry.py  osd_modifier.py  time_utils.py
src/: __init__.py  api.py  cli.py  exceptions.py  pipeline.py
src/assets/: config.yml
src/config/: botsort_vehicles.yaml  settings.py
src/data/: directory_scanner.py  video_source.py
src/output/: video_writer.py
src/processing/: __init__.py  counter.py  detector.py  segmenter.py  track_deduplicator.py  tracker.py
src/utils/: __init__.py  deblurring.py  osd_modifier.py  osd_reader.py
tests/: test_extract_time.py  test_fix_osd.py  test_process_video.py
