[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aforos-cli"
version = "1.0.0"
description = "CLI para procesamiento de videos de aforo vehicular con YOLO"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ingeodev"}
]
keywords = ["yolo", "vehicle-counting", "video-processing", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "pillow>=10.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lapx>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
aforos = "src.cli:main"

[project.urls]
"Homepage" = "https://github.com/Ingeodev/vehicle-counter"
"Bug Tracker" = "https://github.com/Ingeodev/vehicle-counter/issues"

[tool.setuptools]
packages = ["src", "src.config", "src.data", "src.output", "src.processing", "src.storage", "src.utils"]
include-package-data = true

[tool.setuptools.package-data]
"src" = ["assets/*", "py.typed"]
